# Agents

./: .gitignore  README.md  app.py  budget.py  config.py  council.py  main.py  package.json  pandas.py  pyproject.toml  router.py
agents/: __init__.py  analyst.py  consultant.py  job_guardrails.py  job_machine.py  pipeline.py
electron/: main.cjs  preload.cjs
openpyxl/: __init__.py  styles.py  utils.py  workbook.py
src/: App.tsx  jsonschema.py  styles.css  tenacity.py  vite-env.d.ts
src/council/: __init__.py  model_clients.py
templates/: analyst_system.txt  consultant_system.txt  decision_forcer.txt  index.html  job_system.txt
tests/: test_analyst_pipeline.py  test_budget.py  test_consultant.py  test_council.py  test_e2e.py  test_job_machine.py  test_model_clients.py  test_router.py  test_web_search.py
tools/: __init__.py  file_builder.py  model_auditor.py  model_executor.py  web_search.py
